# Franks-Chemical-Simulator-V2

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SoftwareStructure.txt  package-lock.json  package.json
Chemical_Reaction_Engineering_Module/: Adiabatic A=B.py  Equation-6-31.py  LEP-10-1.py  LEP-10-2.py  LEP-10-3.py  LEP-10-4.py  LEP-10-5.py  LEP-10-6.py  LEP-10-Algorithm.py  LEP-11-3.py  LEP-11-4.py  LEP-11-6.py  LEP-12-1a.py  LEP-12-1b.py  LEP-12-1c.py  LEP-12-1d.py  LEP-12-2a.py  LEP-12-2c.py  LEP-12-2d.py  LEP-12-3.py  LEP-12-4.py  LEP-12-5.py  LEP-12-6.py  LEP-12-7a.py  LEP-12-7b.py  LEP-12-7c.py  LEP-12-7d.py  LEP-13-1a.py  LEP-13-1b.py  LEP-13-2.py  LEP-13-3_English.py  LEP-13-3_MKS.py  LEP-13-4.py  LEP-13-5.py  LEP-13-6.py  LEP-14-1.py  LEP-14-2.py  LEP-14-3.py  LEP-14-4.py  LEP-14-7.py  (+96 more)
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: README.md  build-wasm.sh  build.js
src/: flowsheet.js
src/main/: index.js
src/renderer/: index.html  script.js  styles.css
src/simulation/: flowsheetModel.js  propertiesCalculator.js  solver.js
src/simulation/database/: dbHandler.js
